Fix Javadoc issues preventing release builds with newer Java versions
Enable release builds to be built with Java 10 onwards.